# tfg

./: .gitignore  Memoria.md  ProblemInfluencer.cpp  README.md  alggenetico.cpp  generar_grafico.py  lanzar_ajuste_fino_global.sh  lanzar_benchmark.sh  lanzar_validacion_config_fija.sh  main_metrics.md  prompts_contexto.md  requirements.txt  wins.py
.matplotlib-cache/: fontlist-v390.json
.matplotlib_cache_fake/: fontlist-v390.json
experiments/: mhs_benchmark.py  mhs_plots.py  plot_mhs_puras_boxplots.py  run_mhs_puras_benchmark.py
informes/: dataset_minimo.md
memoria/: generated  proyecto.synctex(busy)  proyecto.tex
metaheuristics/problems/cec2017/cec2017real/code/: CMakeLists.txt
metaheuristics/problems/cec2017/cec2017real/code/results_de_smoke/: results_1_10.txt
metaheuristics/problems/cec2017/cec2017real/code/wrappers/: cec17.py
preprocesado_de_datos/: alinear_datasets.py  analizar_max_por_bin_visual.py  evaluar_tipo_bins.py  exportar_dataset_completo.py  preprocesado.py
results/: age_cec2017_d100_full_summary.csv  age_cec2017_d100_p100_full_by_function.csv  age_cec2017_d100_p20_full_by_function.csv  age_cec2017_d100_p50_full_by_function.csv  age_cec2017_d10_full_by_function.csv  age_cec2017_d10_full_summary.csv  age_cec2017_d30_d50_d100_full_summary.csv  age_cec2017_d30_full_summary.csv  age_cec2017_d30_p100_full_by_function.csv  age_cec2017_d30_p20_full_by_function.csv  age_cec2017_d30_p50_full_by_function.csv  age_cec2017_d50_full_summary.csv  age_cec2017_d50_p100_full_by_function.csv  age_cec2017_d50_p20_full_by_function.csv  (+4 more)
(+1102 files in other folders)
